[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/menus/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 560.0
color = Color( 0, 0, 0, 0.188235 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 560.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 944.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 406.0
margin_top = 25.0
margin_right = 537.0
margin_bottom = 39.0
text = "ui_title_pause_menu"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 944.0
margin_bottom = 424.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 914.0
margin_bottom = 326.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/CenterContainer"]
margin_left = 385.0
margin_top = 111.0
margin_right = 498.0
margin_bottom = 185.0
custom_constants/separation = 10

[node name="Continue" type="Button" parent="VBoxContainer/MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 113.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "ui_btn_continue"
flat = true

[node name="Options" type="Button" parent="VBoxContainer/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 113.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 32 )
text = "ui_btn_options"
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 428.0
margin_right = 944.0
margin_bottom = 520.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer2"]
margin_left = 30.0
margin_top = 30.0
margin_right = 914.0
margin_bottom = 62.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer2/CenterContainer"]
margin_left = 401.0
margin_right = 483.0
margin_bottom = 32.0
custom_constants/separation = 10

[node name="Quit" type="Button" parent="VBoxContainer/MarginContainer2/CenterContainer/VBoxContainer"]
margin_right = 82.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "ui_btn_quit"
flat = true
[connection signal="pressed" from="VBoxContainer/MarginContainer/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/CenterContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
